# presslint-core

./: Cargo.toml  README.md
crates/presslint/: Cargo.toml  JOURNAL.md
crates/presslint-actions/: Cargo.toml  JOURNAL.md
crates/presslint-actions/benches/: actions.rs
crates/presslint-actions/src/: lib.rs  patch.rs  tests.rs
crates/presslint-actions/src/tests/: json.rs  patch_boundary.rs
crates/presslint-color/: Cargo.toml  JOURNAL.md
crates/presslint-color/src/: color_policy.rs  devicelink.rs  lib.rs  output_intent.rs  overprint.rs  policy.rs  spot.rs  tests.rs  transform_cache.rs  transform_plan.rs
crates/presslint-color/src/tests/: color_policy.rs  devicelink.rs  json.rs  overprint.rs  spot.rs  transform_cache.rs  transform_plan.rs
crates/presslint-core/: JOURNAL.md
crates/presslint-core/src/: lib.rs
crates/presslint-inventory/: Cargo.toml  JOURNAL.md
crates/presslint-inventory/benches/: inventory.rs
crates/presslint-inventory/src/: digest.rs  inventory.rs  lib.rs  operands.rs  tests.rs  walker.rs
crates/presslint-inventory/src/tests/: combined.rs  extgstate.rs  json.rs  serde_shape.rs  xobject.rs
crates/presslint-pdf/: Cargo.toml  JOURNAL-archive.md  JOURNAL.md
crates/presslint-pdf/benches/: pdf_source.rs
crates/presslint-pdf/src/: array_extent.rs  classic_xref.rs  classic_xref_chain.rs  content_stream_extent.rs  content_stream_filter.rs  content_stream_slice.rs  dictionary_entries.rs  document_access.rs  form_xobject_resources.rs  indirect_reference.rs  integer_object.rs  lib.rs  object_body.rs  object_dictionary.rs  object_header.rs  object_lookup.rs  object_resolver.rs  object_stream.rs  object_stream_objects.rs  page_content_targets.rs  page_resource_inheritance.rs  page_tree_kids.rs  page_tree_node.rs  page_tree_node_type.rs  page_tree_reference.rs  page_xobject_resources.rs  source.rs  source_utils.rs  startxref.rs  stream_decode.rs  tests.rs  trailer_prev.rs  trailer_root.rs  xref_section.rs  xref_stream.rs  xref_stream_trailer.rs
crates/presslint-pdf/src/tests/: array_extent.rs  classic_xref.rs  classic_xref_chain.rs  content_stream_bridge.rs  content_stream_filter.rs  document_access_classic_chain.rs  form_xobject_resources.rs  indirect_reference.rs  integer_object.rs  object_body.rs  object_dictionary.rs  object_resolver.rs  object_stream_objects.rs  page_content_targets.rs  page_tree_kids.rs  page_tree_node.rs  page_tree_node_type.rs  page_tree_reference.rs  page_xobject_resources.rs  source.rs  stream_decode.rs  trailer_prev.rs  trailer_root.rs  xref_stream.rs  xref_stream_trailer.rs
crates/presslint-pdf/src/tests/content_stream_extent/: mod.rs  serde_harness.rs
crates/presslint-selectors/: Cargo.toml  JOURNAL.md
crates/presslint-selectors/src/: lib.rs  tests.rs
crates/presslint-selectors/src/tests/: json.rs
crates/presslint-syntax/: Cargo.toml  JOURNAL.md
crates/presslint-syntax/benches/: syntax.rs
crates/presslint-syntax/src/: assembler.rs  lib.rs  model.rs  serializer.rs  tests.rs  tokenizer.rs
crates/presslint-syntax/src/tests/: assembler.rs  model.rs  serializer.rs  tokenizer.rs
crates/presslint-types/: Cargo.toml  JOURNAL.md
crates/presslint-types/src/: lib.rs
crates/presslint/src/: document_inventory.rs  form_inventory.rs  lib.rs  page_content.rs  pdf_inventory.rs  preflight.rs  tests.rs
crates/presslint/src/tests/: form_inventory.rs  pdf_inventory.rs  preflight.rs
crates/presslint/src/tests/pdf_inventory/: multi_stream.rs
docs/: architecture.md  dependency-policy.md  mutation-boundary-contract.md  status.md
scripts/: check_licenses.sh  check_scripts.sh  ci_check.sh
