[workspace]
resolver = "3"
members = [
    "crates/presslint-core",
    "crates/presslint-pdf",
    "crates/presslint-syntax",
    "crates/presslint-inventory",
    "crates/presslint-selectors",
    "crates/presslint-actions",
    "crates/presslint-color",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.87"
authors = ["Lorenzo Battiston and presslint-core contributors"]
license = "Apache-2.0"
description = "Programmable PDF prepress core."
readme = "README.md"
keywords = ["pdf", "prepress", "color", "icc"]
categories = ["graphics", "multimedia", "parser-implementations"]

[workspace.dependencies]
presslint-core = { path = "crates/presslint-core", version = "0.0.1" }
presslint-pdf = { path = "crates/presslint-pdf", version = "0.0.1" }
presslint-syntax = { path = "crates/presslint-syntax", version = "0.0.1" }
presslint-inventory = { path = "crates/presslint-inventory", version = "0.0.1" }
presslint-selectors = { path = "crates/presslint-selectors", version = "0.0.1" }
presslint-actions = { path = "crates/presslint-actions", version = "0.0.1" }
presslint-color = { path = "crates/presslint-color", version = "0.0.1" }

serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5", default-features = false }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
module_name_repetitions = "allow"
