[package]
name = "presslint-actions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Serializable action and recipe model for presslint."

[dependencies]
presslint-types.workspace = true
presslint-inventory.workspace = true
presslint-selectors.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
presslint-syntax.workspace = true

[[bench]]
name = "actions"
harness = false

[lints]
workspace = true
