[package]
name = "presslint-inventory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Queryable PDF page-object inventory for presslint-core."

[dependencies]
presslint-core.workspace = true
presslint-syntax.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "inventory"
harness = false

[lints]
workspace = true
