[package]
name = "presslint-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Structural PDF access interfaces for presslint-core."

[dependencies]
serde.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "pdf_source"
harness = false

[lints]
workspace = true
