[package]
name = "presslint-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Byte-preserving PDF content-stream syntax for presslint."

[dependencies]
presslint-types.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "syntax"
harness = false

[lints]
workspace = true
