[package]
name = "presslint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
presslint-types.workspace = true
presslint-pdf.workspace = true
presslint-syntax.workspace = true
presslint-inventory.workspace = true
presslint-selectors.workspace = true
presslint-actions.workspace = true
presslint-color.workspace = true

[lints]
workspace = true
